--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>News Two</title>
+    <title>News</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <!--[if It IE 9]>
     <script>
@@ -92,3 +92,4 @@
 
   </body>
 </html>
+# com5961
