--- a/News.html
+++ b/News.html
@@ -28,7 +28,7 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a><li>
+        <li><a href="home.html">Home</a><li>
         <li><a href="archive.html">Archives</a><li>
         <li><a href="about.html">About</a><li>
       </ul>
@@ -91,4 +91,4 @@
     </footer>
 
   </body>
-</html>
+</html># com5961
